syntax = "proto3";

package otus.scala.grpc;

message HelloRequest {
  string msg = 1;
  int32 code = 2;
  HelloRequestInner inner = 3;
}

message HelloRequestInner {
  string msg = 1;
  int32 code = 2;
}

message HelloResponse {
  string msg = 1;
}

service HelloWorld {
  rpc hello (HelloRequest) returns (HelloResponse);
  rpc helloStream (stream HelloRequest) returns (stream HelloResponse);
}